[package]
name = "hugefs"
version = "0.1.0"
authors = ["Eelco Dolstra <edolstra@gmail.com>"]
edition = "2018"

[dependencies]
#fuse = "0.3"
fuse = { path = "../rust-fuse" }
libc = "0.2"
base64 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake2 = "0.8"
nix = "0.5"
rusoto_core = "0.40"
rusoto_s3 = "0.40"
futures = "0.1"
env_logger = "0.6"