[package]
name = "hugefs"
version = "0.1.0"
authors = ["Eelco Dolstra <edolstra@gmail.com>"]
edition = "2018"

[dependencies]
#fuse = "0.3"
#fuse = { git = "https://github.com/zargony/rust-fuse", rev = "f834fbbd5614976e8d480da249d487609504ee6e" }
fuse = { path = "../rust-fuse" }
libc = "0.2"
base64 = "0.10"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
blake2 = "0.8"
nix = "0.5"
#rusoto_core = "0.42"
#rusoto_s3 = "0.42"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
env_logger = "0.6"
log = "0.4"
aes-ctr = "0.3"
structopt = "0.2"
hex = "0.4"
